added readme with todos, implemented dummy